# alpha_system

./: .gitignore  ACTIVE_CAMPAIGN.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CRITICAL.md  PROGRESS.md  PROJECT_STATUS.md  README.md  frontier.yaml  justfile  pyproject.toml
.claude/: settings.json  statusline-command.sh
.codex/: config.toml
.github/: pull_request_template.md
artifacts/: README.md
campaigns/: README.md
configs/: README.md
decisions/: 0001-local-first-stack.md  0002-reference-backtest-truth.md  0003-domain-boundary-separation.md  0004-no-broker-live-in-v1.md  0005-l2-readiness-design-only.md  0006-feature-label-value-storage.md  0007-producer-compute-fast-path.md  0008-harness-hardening-audit-response.md  0009-two-lane-feature-authoring.md  0010-bbo-resident-microstructure-label.md  ADR-IVL-0001-role-unification.md  README.md
docs/: AGENT_CONTEXT_MAP.md  AI_AGENT_GUIDE.md  ARCHITECTURE.md  ARTIFACT_POLICY.md  AUDIT_REPORTS.md  BACKTEST_TIERS.md  BACKTEST_TRUTH_POLICY.md  CALENDAR_AND_SESSIONS.md  CLI_COMMANDS_TARGET.md  CLI_REFERENCE.md  CONSERVATIVE_EXECUTION_SEMANTICS.md  CONTRACTS.md  COST_AND_SLIPPAGE.md  DATA_LAYER.md  DATA_VALIDATION_CLI.md  DOMAIN_BOUNDARIES.md  EXAMPLE_WORKFLOWS.md  EXPERIMENT_REGISTRY.md  FACTOR_CARDS.md  FACTOR_COMPUTE.md  FACTOR_DIAGNOSTICS.md  FACTOR_REGISTRY.md  FAST_PATH_LIMITATIONS.md  FAST_PATH_PARITY.md  FEATURE_LABEL_FOUNDATION_ENTRY_CONTRACT.md  FIXTURE_POLICY.md  FUTURE_L2_REPLAY.md  GIT_AND_ARTIFACT_DISCIPLINE.md  GRID_ENGINE.md  GRID_OVERFIT_POLICY.md  HARNESS_WORKFLOW_2.md  IDEA_TO_VERDICT_DOGFOOD.md  IDEA_TO_VERDICT_SCHEMA_MAP.md  INSTRUMENT_MASTER.md  KNOWN_LIMITATIONS.md  L2_DERIVED_FEATURES.md  L2_FEATURE_SCOPE_POLICY.md  L2_READINESS.md  L2_SCOPE_BOUNDARIES.md  LABEL_STORE.md  (+41 more)
handoffs/: ADF1_DATABENTO_ES_NQ_RTY_OHLCV_BBO_DEEP_HISTORY.md  ADF1_LOCAL_RESEARCH_DATA_BACKFILL.md  ASV1-HYGIENE.md  ASV1-P00.md  ASV1-P02.md  ASV1-P03.md  ASV1-P04.md  ASV1-P06.md  ASV1-P07.md  ASV1-P10.md  ASV1-P11.md  ASV1-P12.md  (+19 more)
(+2957 files in other folders)
