[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-system"
version = "0.1.0"
description = "Local-first alpha_system Python workspace skeleton."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.8",
]
ibkr = [
    "ib_insync>=0.9.86",
]
databento = [
    "databento>=0.79",
]

[project.scripts]
alpha = "alpha_system.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
