[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-system"
version = "0.1.0"
description = "Local-first alpha_system Python workspace skeleton."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.8",
]
ibkr = [
    "ib_insync>=0.9.86",
]
databento = [
    "databento>=0.79",
]

[project.scripts]
alpha = "alpha_system.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Use the importlib import mode so test modules are imported by their full path
# rather than by bare basename. This lets same-named test files coexist across
# packages (e.g. tests/unit/features/test_contracts.py and
# tests/unit/runtime/diagnostics/test_contracts.py) without pytest's
# "import file mismatch" collection error, and removes the need for scattered
# __init__.py files to disambiguate duplicate basenames.
addopts = "--import-mode=importlib"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
